--- a/Qualtrics/flanker_run.html
+++ b/Qualtrics/flanker_run.html
@@ -7,8 +7,9 @@
   <script src="Flanker_Qualtrics/Qualtrics/plugins/jspsych-html-keyboard-response.js"></script>
   <script src="Flanker_Qualtrics/Qualtrics/plugins/jspsych-image-keyboard-response.js"></script>
   <link rel="stylesheet" href="Flanker_Qualtrics/Qualtrics/css/jspsych.css">
-  <script src="Qualtrics/flanker_main.js"></script>
-</head>
+
+  <script src="flanker_main.js"></script>
+  </head>
 
 <body>
 </body>
