--- a/Qualtrics/flanker_run.html
+++ b/Qualtrics/flanker_run.html
@@ -3,10 +3,10 @@
 
 <head>
   <title>Flanker Task</title>
-  <script src="Flanker_Qualtrics/Qualtrics/jspsych.js"></script>
-  <script src="Flanker_Qualtrics/Qualtrics/plugins/jspsych-html-keyboard-response.js"></script>
-  <script src="Flanker_Qualtrics/Qualtrics/plugins/jspsych-image-keyboard-response.js"></script>
-  <link rel="stylesheet" href="Flanker_Qualtrics/Qualtrics/css/jspsych.css">
+  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Flanker_Qualtrics/Qualtrics/jspsych.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Flanker_Qualtrics/Qualtrics/plugins/jspsych-html-keyboard-response.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Flanker_Qualtrics/Qualtrics/plugins/jspsych-image-keyboard-response.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/XavierCP7/Flanker_Qualtrics/Qualtrics/css/jspsych.css">
 
   <script src="flanker_main.js"></script>
   </head>
