--- a/Qualtrics/flanker_run.html
+++ b/Qualtrics/flanker_run.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <title>Flanker Task</title>
+<meta charset="UTF-8">
+<title>Flanker Task</title>
   <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Flanker_Qualtrics/Qualtrics/jspsych.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Flanker_Qualtrics/Qualtrics/plugins/jspsych-html-keyboard-response.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Flanker_Qualtrics/Qualtrics/plugins/jspsych-image-keyboard-response.js"></script>
