--- a/Flanker/flanker_run.html
+++ b/Flanker/flanker_run.html
@@ -12,10 +12,10 @@
 <div>
     <span style="font-size: 24px;">
     <br><br>
-    If you are seeing this message for <span style="color: rgb(255, 0, 0);"><b>more than 5 minutes</b></span>,<br>
-    please screen-capture this screen and send the image to us.
+    Si vous voyez ce message,<br>
+    Veuillez aviser l'examinateur.
     <br><br>
-    <span style="font-size: 28px;">We are very sorry for the inconvenience.</span>
+    <span style="font-size: 28px;">Désolé de l'inconvénient.</span>
     </span>
 </div>
   
