--- a/Flanker/flanker_run.html
+++ b/Flanker/flanker_run.html
@@ -12,10 +12,9 @@
 <div>
     <span style="font-size: 24px;">
     <br><br>
-    Si vous voyez ce message,<br>
-    Veuillez aviser l'examinateur.
+    Si vous voyez ce message, veuillez aviser l'examinateur.
     <br><br>
-    <span style="font-size: 28px;">Désolé de l'inconvénient.</span>
+    <span style="font-size: 24px;">Désolé de l'inconvénient.</span>
     </span>
 </div>
   
