--- a/Flanker/flanker_run.html
+++ b/Flanker/flanker_run.html
@@ -4,10 +4,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Flanker Task</title>
-  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Qualtrics@Flanker/Flanker/jspsych.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Qualtrics@Flanker/Flanker/plugins/jspsych-html-keyboard-response.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Qualtrics@Flanker/Flanker/plugins/jspsych-image-keyboard-response.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/XavierCP7/Qualtrics@Flanker/Flanker/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Qualtrics@1/Flanker/jspsych.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Qualtrics@1/Flanker/plugins/jspsych-html-keyboard-response.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/XavierCP7/Qualtrics@1/Flanker/plugins/jspsych-image-keyboard-response.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/XavierCP7/Qualtrics@1/Flanker/css/jspsych.css" rel="stylesheet" type="text/css"></link>
   
 <div>
     <span style="font-size: 24px;">
