--- a/n-back/index.html
+++ b/n-back/index.html
@@ -10,10 +10,10 @@
   <script>
     var timeline = [];
 
-    var n_back_set = ['Z', 'X', 'C', 'V', 'B', 'N'];
+    var n_back_set = ['q', 'w', 'r', 't', 'y', 'p', 's', 'd', 'f', 'g', 'h', 'j', 'k', 'l', 'z', 'c', 'v', 'b', 'n', 'm'];
     var sequence = [];
 
-    var n_back_trial = {
+    var two_back_trial = {
       type: 'html-keyboard-response',
       stimulus: function() {
         if(sequence.length < 2){
@@ -33,8 +33,8 @@
         sequence.push(letter);
         return '<span style="font-size: 96px;">'+letter+'</span>'
       },
-      choices: ['M'],
-      trial_duration: 1500,
+      choices: ['Y'],
+      trial_duration: 3000,
       response_ends_trial: false,
       post_trial_gap: 500,
       data: {
@@ -60,8 +60,8 @@
       timeline_variables: n_back_trials,
       sample: {
         type: 'with-replacement',
-        size: 12,
-        weights: [1, 2]
+        size: 20,
+        weights: [3, 7]
       }
     }
 
